--- a/app/src/main/res/layout/activity_sound_recording.xml
+++ b/app/src/main/res/layout/activity_sound_recording.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SoundActivity">
+    tools:context=".ui.SoundActivity">
 
     <Button
         android:id="@+id/btn_sound"
