[音视频demo wys 2020-5-14] opengl渲染简单三角形

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,11 @@
         android:text="普通播放器"
         android:onClick="clickToSimplePlayer"
         />
+    <Button
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="opengl渲染简单三角形"
+        android:onClick="clickToSimpleRender"
+        />
 </LinearLayout>
