--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,24 +8,31 @@
     tools:context=".ui.MainActivity">
 
     <Button
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="录音"
         android:onClick="clickToSound"
         />
     <Button
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="普通播放器"
         android:onClick="clickToSimplePlayer"
         />
     <Button
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="opengl渲染简单三角形"
         android:onClick="clickToSimpleRender"
+        />
+    <Button
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="opengl渲染简单纹理贴图"
+        android:onClick="clickToSimplePic"
         />
 </LinearLayout>
