[音视频demo wys 2020-6-5] opengl渲染多个视频以及视频宽高适配

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,4 +42,11 @@
         android:text="opengl渲染视频"
         android:onClick="clickToVideo"
         />
+    <Button
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="opengl渲染多个视频"
+        android:onClick="clickToTwoVideo"
+        />
 </LinearLayout>
