[音视频demo wys 2020-6-10] 视频硬编码

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,4 +63,11 @@
         android:text="FBO实现“灵魂出窍”"
         android:onClick="clickToFBO"
         />
+    <Button
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="视频编码"
+        android:onClick="clickToByte"
+        />
 </LinearLayout>
